# Echo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/superpowers/specs/: 2026-07-21-persistent-teammates-v1-design.md
echo/: __init__.py  __main__.py  cli.py  config.py
echo/core/: __init__.py  agent_loop.py  context_manager.py  echo.py  task_state.py
echo/evaluation/: __init__.py  benchmark.py  evaluator.py  metrics.py
echo/hooks/: __init__.py  base.py  builtin.py
echo/memory/: __init__.py  base.py  default.py  durable.py
echo/multi_agent/: __init__.py  message_bus.py  sub_agent.py  task_manager.py  teammate.py  teammate_manager.py
echo/persistence/: __init__.py  checkpoint.py  run_store.py  session_store.py  trace.py
echo/providers/: __init__.py  anthropic_client.py  base.py  fake_client.py  ollama_client.py  openai_client.py
echo/scheduler/: __init__.py  cron_scheduler.py
echo/security/: __init__.py  env_filter.py  permission.py  redaction.py  sandbox.py
echo/tools/: __init__.py  base.py  builtin.py  executor.py  registry.py  sandbox.py
tests/: test_agent_loop.py  test_evaluation.py  test_hooks.py  test_persistence.py  test_providers.py  test_regression.py  test_security.py  test_state_machine.py  test_teammates.py  test_tools.py  test_trace.py
