[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-agent"
version = "0.1.0"
description = "A lightweight local coding agent — simple, extensible, production-grade skeleton."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "VK"}]
keywords = ["agent", "llm", "coding-assistant", "cli"]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.60.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
echo-agent = "echo.cli:main"

[tool.setuptools.packages.find]
include = ["echo*"]
